--- a/app/linked-historians/linked-historians.vcxproj
+++ b/app/linked-historians/linked-historians.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="event.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="event.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
