--- a/app/linked-historians/linked-historians.vcxproj.filters
+++ b/app/linked-historians/linked-historians.vcxproj.filters
@@ -7,11 +7,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="searchAlgorithms.cpp" />
+    <ClCompile Include="sortingAlgorithms.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="menu.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="event.h" />
     <ClInclude Include="searchAlgorithms.h" />
+    <ClInclude Include="sortingAlgorithms.h" />
   </ItemGroup>
 </Project>
