--- a/app/linked-historians/linked-historians.vcxproj
+++ b/app/linked-historians/linked-historians.vcxproj
@@ -111,7 +111,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)libs\libs</AdditionalLibraryDirectories>
-      <AdditionalDependencies>database.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>database.lib;utilities.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,7 +132,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="event.cpp" />
-    <ClCompile Include="authentication.cpp" />
     <ClCompile Include="authScreen.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
